deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sub-backend
spec:
  ports:
  - name: sub-backend
    port: 3001
    protocol: TCP
    targetPort: 3001
  - name: sub-backend-ws
    port: 3011
    protocol: TCP
    targetPort: 3011
  selector:
    app: sub-backend
  type: ClusterIP
