deployment/base/ingress-ws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/default-backend: sub-backend
    ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/default-backend: sub-backend
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /notif-ws
    nginx.org/websocket-services: sub-backend
  name: sub-backend-ws
spec:
  defaultBackend:
    service:
      name: sub-backend
      port:
        number: 3011
  rules:
  - host: staging-api.subsocial.network
    http:
      paths:
      - backend:
          service:
            name: sub-backend
            port:
              number: 3011
        path: /notif-ws
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - staging-api.subsocial.network
    secretName: subsocial-ssl
