deployment/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/client-max-body-size: 10m
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.org/client-max-body-size: 10m
  name: sub-back
spec:
  ingressClassName: nginx
  rules:
  - host: staging-api.subsocial.network
    http:
      paths:
      - backend:
          service:
            name: sub-backend
            port:
              number: 3001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - staging-api.subsocial.network
    secretName: subsocial-ssl
